--- a/contato.html
+++ b/contato.html
@@ -63,14 +63,13 @@ Se você tem alguma dúvida, precisa de ajuda com um agendamento ou quer saber m
             </div>
             </div>
             <div class="lado-direito">
-                <form action="">
-                    <input type="text" placeholder="Nome" required>
-                    <input type="email" placeholder="G-mail" required>
-                    <input type="text" placeholder="Assunto" required>
-                    <textarea cols="30" rows="10" placeholder="Sua Mensagem" required></textarea>
-                    <button type="button" class="btn btn-info">Enviar mensagem</button>
-                </form>
-            </div>
+                <form action="https://formsubmit.co/wandersonwanderley365@gmail.com" method="POST">
+                 <input type="text" name="nome" placeholder="Nome" required>
+                <input type="email" name="_replyto" placeholder="G-mail" required>
+                <input type="text" name="assunto" placeholder="Assunto" required>
+                <textarea name="mensagem" cols="30" rows="10" placeholder="Sua Mensagem" required></textarea>
+                <button type="submit" class="btn btn-info">Enviar mensagem</button>
+      </form>
         </div>
 </div>
    </section>
@@ -105,7 +104,7 @@ Se você tem alguma dúvida, precisa de ajuda com um agendamento ou quer saber m
       <a
         data-mdb-ripple-init
         class="btn btn-link btn-floating btn-lg text-body m-1"
-        href=""
+        href="https://github.com/WandersonWanderley"
         role="button"
         data-mdb-ripple-color="dark"
         ><i class="fab fa-github"></i
