--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Na BanjoPet, seu pet é tratado como parte da família! Oferecemos os melhores p
       <a
         data-mdb-ripple-init
         class="btn btn-link btn-floating btn-lg text-body m-1"
-        href=""
+        href="https://github.com/WandersonWanderley"
         role="button"
         data-mdb-ripple-color="dark"
         ><i class="fab fa-github"></i
