--- a/sobre.html
+++ b/sobre.html
@@ -81,7 +81,7 @@ Nossa empresa ainda está em fase de estruturação, mas cada detalhe está send
       <a
         data-mdb-ripple-init
         class="btn btn-link btn-floating btn-lg text-body m-1"
-        href=""
+        href="https://github.com/WandersonWanderley"
         role="button"
         data-mdb-ripple-color="dark"
         ><i class="fab fa-github"></i
